new fragment connexion and fields

--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -4,45 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.register.RegisterFragment">
+    tools:context=".ConnexionFragment">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign-up"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/bt_return"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bt_return" />
-
-    <ImageButton
-        android:id="@+id/bt_return"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/white"
-        android:contentDescription="Return button"
-        android:src="?attr/actionModeCloseDrawable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/red" />
-
-    <EditText
-        android:id="@+id/tf_email"
+    <Button
+        android:id="@+id/bt_google_connect"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="text|textEmailAddress"
+        android:text="Se connecter avec google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tf_password" />
+
+    <Button
+        android:id="@+id/bt_connex"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="166dp"
+        android:layout_marginEnd="16dp"
+        android:text="Se connecter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_google_connect" />
 
     <EditText
         android:id="@+id/tf_password"
@@ -59,53 +45,69 @@
         app:layout_constraintTop_toBottomOf="@+id/tf_email" />
 
     <EditText
-        android:id="@+id/tf_confirm_password"
+        android:id="@+id/tf_email"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Confirm password"
-        android:inputType="text|textPassword"
+        android:hint="Email"
+        android:inputType="text|textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tf_password" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-    <Button
-        android:id="@+id/bt_google_connect"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/bt_return"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:text="Se connecter avec google"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        android:contentDescription="Return button"
+        android:src="?attr/actionModeCloseDrawable"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tf_confirm_password" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/red" />
 
     <TextView
-        android:id="@+id/tv_terms"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="150dp"
         android:layout_marginEnd="16dp"
-        android:text="By continuing you agree to our term and conditions."
+        android:text="Sign-up"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/bt_return"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_google_connect" />
+        app:layout_constraintTop_toTopOf="@+id/bt_return" />
 
-    <Button
-        android:id="@+id/bt_register"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_mdp_oublie"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="Register"
+        android:text="Mot de passe oublié?"
+        android:textColor="#5377F8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_terms" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_connex" />
 
+    <Button
+        android:id="@+id/bt_create_account"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:text="Créer un compte"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_mdp_oublie" />
 </androidx.constraintlayout.widget.ConstraintLayout>
