--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E93347</color>
     <color name="orange">#FD5800</color>
-    <color name="light_grey">#B9B9B9</color>
+    <color name="light_grey">#F0F0F0</color>
 </resources>
