Add function to login in datasource repository, add a UseCase

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/registerFragment"
         android:title="register" />
+    <item
+        android:id="@+id/connexionFragment"
+        android:title="connexion" />
 </menu>
