--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -60,18 +60,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title2" />
 
-    <ImageButton
+    <Button
         android:id="@+id/bt_return2"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        style="@style/Widget.Material3.Button.IconButton.Filled"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
-        android:contentDescription="Return button"
-        android:src="?attr/actionModeCloseDrawable"
+        android:contentDescription="return button"
+        app:icon="?attr/actionModeCloseDrawable"
+        app:iconTint="@color/red"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/red" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_title2"
