--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/splash_gradient" />
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/pingouin_icon" />
-    </item>
+    <item
+        android:width="160dp"
+        android:height="160dp"
+        android:drawable="@drawable/pingouin"
+        android:gravity="center" />
 </layer-list>
