--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,4 +9,15 @@
         <item name="android:statusBarColor">@color/red</item>
     </style>
 
+    <style name="Button.Red" parent="Theme.Eventify">
+        <item name="cornerRadius">16dp</item>
+        <item name="backgroundTint">@color/red</item>
+        <item name="android:capitalize">sentences</item>
+    </style>
+
+    <style name="Textfield_red_stroke">
+        <item name="android:background">@drawable/edit_text_selector</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/hint_default</item>
+    </style>
 </resources>
