--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="hint_default">#808080</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E93347</color>
     <color name="orange">#FD5800</color>
-    <color name="light_grey">#B9B9B9</color>
+    <color name="light_grey">#F0F0F0</color>
 </resources>
