--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,9 +21,10 @@
         <item name="android:capitalize">sentences</item>
     </style>
 
-    <style name="Textfield.White" parent="Theme.Eventify">
-        <item name="android:paddingVertical">8dp</item>
-        <item name="android:paddingHorizontal">12dp</item>
+    <style name="Textfield_red_stroke">
+        <item name="android:background">@drawable/edit_text_selector</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHintInverse">@color/hint_default</item>
     </style>
 
 </resources>
