change fields using themes

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -31,50 +31,83 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/bt_return" />
 
-            <EditText
-                android:id="@+id/tf_email"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="Email"
-                android:inputType="text|textEmailAddress"
+                app:boxBackgroundMode="none"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tf_phone_number" />
+                app:layout_constraintTop_toBottomOf="@+id/input_layout_phone">
 
-            <EditText
-                android:id="@+id/tf_password"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="Password"
-                android:inputType="text|textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tf_email" />
+                <EditText
+                    android:id="@+id/tf_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/edit_text_selector"
+                    android:ems="10"
 
-            <EditText
-                android:id="@+id/tf_confirm_password"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
+                    android:hint="Email"
+                    android:inputType="text|textEmailAddress"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="Confirm password"
-                android:inputType="text|textPassword"
+                app:boxBackgroundMode="none"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tf_password" />
+                app:layout_constraintTop_toBottomOf="@+id/input_layout_email">
+
+                <EditText
+                    android:id="@+id/tf_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/edit_text_selector"
+                    android:ems="10"
+
+                    android:hint="Password"
+                    android:inputType="text|textPassword"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_conf_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:boxBackgroundMode="none"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/input_layout_password">
+
+                <EditText
+                    android:id="@+id/tf_confirm_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/edit_text_selector"
+                    android:ems="10"
+
+                    android:hint="Confirm password"
+                    android:inputType="text|textPassword"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/bt_google_connect"
@@ -86,7 +119,8 @@
                 android:text="Se connecter avec google"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tf_photo_url" />
+                app:layout_constraintTop_toBottomOf="@+id/input_layout_photo_url"
+                style="@style/Button.Red"/>
 
             <TextView
                 android:id="@+id/tv_terms"
@@ -99,6 +133,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bt_google_connect" />
+
             <Button
                 android:id="@+id/bt_register"
                 android:layout_width="0dp"
@@ -111,66 +146,98 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_terms" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_terms"
+                style="@style/Button.Red"/>
 
-            <Button
+            <ImageButton
                 android:id="@+id/bt_return"
-                style="@style/Widget.Material3.Button.IconButton.Filled"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="@color/white"
+                android:background="@drawable/white_circle"
                 android:contentDescription="return button"
-                app:icon="?attr/actionModeCloseDrawable"
-                app:iconTint="@color/red"
+                android:src="@drawable/arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/tf_name"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="64dp"
                 android:layout_marginEnd="16dp"
-                android:ems="10"
-                android:hint="Name"
-                android:inputType="text"
+                app:boxBackgroundMode="none"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_title">
 
-            <EditText
-                android:id="@+id/tf_photo_url"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:ems="10"
-                android:hint="Photo url"
-                android:inputType="text|textUri"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tf_confirm_password"
-                android:autofillHints="" />
+                <EditText
+                    android:id="@+id/tf_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/edit_text_selector"
+                    android:ems="10"
 
-            <EditText
-                android:id="@+id/tf_phone_number"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
+                    android:hint="Name"
+                    android:inputType="text"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_photo_url"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:ems="10"
-                android:hint="Phone number"
-                android:inputType="phone"
+                app:boxBackgroundMode="none"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tf_name"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/input_layout_conf_pwd">
+
+                <EditText
+                    android:id="@+id/tf_photo_url"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/edit_text_selector"
+                    android:ems="10"
+
+                    android:hint="Photo url"
+                    android:inputType="text|textUri"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:boxBackgroundMode="none"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/input_layout_name">
+
+                <EditText
+                    android:id="@+id/tf_phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/edit_text_selector"
+                    android:ems="10"
+
+                    android:hint="Phone number"
+                    android:inputType="phone"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
