--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,9 +3,8 @@
     <style name="Theme.Eventify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Font family. -->
         <item name="android:fontFamily">@font/inter</item>
-        <!-- Primary brand color. -->
+        <!-- Primary color. -->
         <item name="colorPrimary">@color/red</item>
-        <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/red</item>
     </style>
 
@@ -20,4 +19,18 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/hint_default</item>
     </style>
+
+    <style name="Search_bar">
+        <item name="android:background">@drawable/rounded_corners_focus</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:searchHintIcon">@android:color/transparent</item>
+        <item name="android:searchIcon">@drawable/search</item>
+        <item name="android:queryBackground">@null</item>
+    </style>
+
+    <style name="roundedImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
