--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimary">@color/red</item>
         <item name="android:windowBackground">@color/light_grey</item>
         <item name="android:statusBarColor">@color/red</item>
+
+        <item name="android:searchViewStyle">@style/Search_bar</item>
     </style>
 
     <!-- Splash screen theme. -->
@@ -28,7 +30,7 @@
         <item name="android:textColorHint">@color/hint_default</item>
     </style>
 
-    <style name="Search_bar">
+    <style name="Search_bar" parent="Theme.Eventify">
         <item name="android:background">@drawable/rounded_corners_focus</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:searchHintIcon">@android:color/transparent</item>
