--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,9 +10,15 @@
         <item name="android:searchViewStyle">@style/Search_bar</item>
     </style>
 
-    <style name="Button.Red" parent="Theme.Eventify">
+    <style name="Button.red" parent="Theme.Eventify">
         <item name="cornerRadius">16dp</item>
-        <item name="backgroundTint">@color/red</item>
+        <item name="android:backgroundTint">@color/red</item>
+        <item name="android:capitalize">sentences</item>
+    </style>
+
+    <style name="Button.white" parent="Theme.Eventify">
+        <item name="cornerRadius">16dp</item>
+        <item name="android:backgroundTint">@color/white</item>
         <item name="android:capitalize">sentences</item>
     </style>
 
@@ -31,7 +37,6 @@
     </style>
 
     <style name="roundedImageViewRounded">
-        <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
 
