--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/registerFragment"
-        android:title="register" />
+        android:id="@+id/homeFragment"
+        android:icon="@drawable/home"
+        android:title="@string/home" />
     <item
         android:id="@+id/connexionFragment"
-        android:title="connexion" />
+        android:icon="@drawable/plus"
+        android:title="@string/add_events" />
+    <item
+        android:id="@+id/registerFragment"
+        android:icon="@drawable/filled_star"
+        android:title="@string/favorites" />
 </menu>
