--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,16 +10,18 @@
         <item name="android:searchViewStyle">@style/Search_bar</item>
     </style>
 
-    <style name="Button.red" parent="Theme.Eventify">
+    <style name="Button.Red" parent="Theme.Eventify">
         <item name="cornerRadius">16dp</item>
         <item name="android:backgroundTint">@color/red</item>
         <item name="android:capitalize">sentences</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="Button.white" parent="Theme.Eventify">
+    <style name="Button.White" parent="Theme.Eventify">
         <item name="cornerRadius">16dp</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:capitalize">sentences</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Textfield_red_stroke">
