--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,16 +18,18 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
-    <style name="Button.red" parent="Theme.Eventify">
+    <style name="Button.Red" parent="Theme.Eventify">
         <item name="cornerRadius">16dp</item>
         <item name="android:backgroundTint">@color/red</item>
         <item name="android:capitalize">sentences</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="Button.white" parent="Theme.Eventify">
+    <style name="Button.White" parent="Theme.Eventify">
         <item name="cornerRadius">16dp</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:capitalize">sentences</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Textfield_red_stroke">
