--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:backgroundTint">@color/red</item>
         <item name="android:capitalize">sentences</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:minHeight">48dp</item>
     </style>
 
     <style name="Button.White" parent="Theme.Eventify">
@@ -22,6 +23,7 @@
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:capitalize">sentences</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:minHeight">48dp</item>
     </style>
 
     <style name="Textfield_red_stroke">
