--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -85,6 +85,7 @@
 
     <Button
         android:id="@+id/bt_google_connect2"
+        style="@style/Button.White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -94,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_layout_password2"
-        style="@style/Button.Red"/>
+        android:drawableEnd="@drawable/ic_google"/>
 
     <Button
         android:id="@+id/bt_connex"
