--- a/app/src/main/res/drawable/edit_text_selector.xml
+++ b/app/src/main/res/drawable/edit_text_selector.xml
@@ -3,7 +3,7 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/input_background" />
             <corners android:radius="16dp" />
             <stroke android:width="1dp" android:color="@color/red" />
         </shape>
@@ -11,9 +11,8 @@
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/input_background" />
             <corners android:radius="16dp" />
-            <stroke android:width="1dp" android:color="@color/black" />
         </shape>
     </item>
 
