--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -51,11 +51,11 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="64dp"
                 android:layout_marginEnd="16dp"
+                android:drawableEnd="@drawable/ic_google"
                 android:text="Se connecter avec google"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title"
-                android:drawableEnd="@drawable/ic_google"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/img_profile"
@@ -63,14 +63,15 @@
                 android:layout_height="150dp"
                 android:layout_marginTop="64dp"
                 android:clickable="true"
-                android:contentDescription="image profil"
-                android:focusable="auto"
-                android:scaleType="centerCrop"
+                android:contentDescription="image profile"
+                android:padding="2dp"
                 android:src="@drawable/profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bt_google_connect"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-                app:layout_constraintTop_toBottomOf="@+id/bt_google_connect" />
+                app:strokeColor="@color/red"
+                app:strokeWidth="2dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_name"
